# forge-cockpit

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
benchmarks/evals/multi_file_patch/: task.yml
benchmarks/evals/parallel_tool_calls/: task.yml
benchmarks/evals/read_over_cat/: task.yml
benchmarks/evals/redundant_cd_with_cwd/: task.yml
benchmarks/evals/search_over_find/: task.yml
benchmarks/evals/sem_search/: task.yml
benchmarks/evals/semantic_search_quality/: task.yml
benchmarks/evals/todo_write_usage/: task.yml
crates/forge_app/src/: app.rs  operation.rs  services.rs  system_prompt.rs  (+2 more)
crates/forge_main/: Cargo.toml
crates/forge_services/: Cargo.toml
crates/forge_web/: Cargo.toml
crates/forge_web/connectors/: demo.yaml  github.yaml  gitlab.yaml  jira.yaml  sentry.yaml  teams.yaml
crates/forge_web/src/: board.rs  connectors.rs  connectors_mcp.rs  craft.rs  dto.rs  index.html  lib.rs  live.rs  pipeline.rs  schedule.rs  secret.rs  squad.rs  usage.rs  webterm.rs
crates/forge_web/src/app/: boards.js  chat.js  connections.js  core.js  crafts.js  panel.js  pipeline.js  schedules.js  team.js  usage.js
crates/forge_workspace/: Cargo.toml  README.md
crates/forge_workspace/examples/: news-digest-rss.yaml  news-digest.yaml  pr-auto-fix.yaml  pr-code-review.yaml  pr-review-post.yaml  pr-review-single.yaml  pr-review-tag.yaml  pr-review.yaml  team-claude-terminal.yaml  team-forgecode.yaml  team-mosaic.yaml
crates/forge_workspace/roles/: README.md  architect.md  coordinator.md  engineer.md  pm.md  qa.md  reviewer.md  visual-verify.md
crates/forge_workspace/src/: lib.rs  memory.rs  message.rs  pipeline.rs  request.rs  team.rs  terminal.rs  watch.rs
desktop/: README.md  package.json
desktop/frontend/: index.html
desktop/src-tauri/: Cargo.toml  tauri.conf.json
npm/forge-cockpit/: README.md  check-consistency.mjs  package.json  platforms.js  postinstall.js
plans/: 2026-01-22-Fix Auto-Sync Workspace Registration Issue-v1.md  2026-01-22-Fix Auto-Sync Workspace Registration Issue-v2.md
scripts/: npm-pack-platform.mjs
templates/: forge-partial-pipeline-instructions.md
(+23 files in other folders)
