[package]
name = "forge_web"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
forge_api.workspace = true
forge_domain.workspace = true
anyhow.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
async-stream.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yml.workspace = true
tracing.workspace = true
open.workspace = true
base64.workspace = true
reqwest.workspace = true
axum = "0.8"
rmcp = { version = "1.0.0", features = ["server", "macros", "transport-streamable-http-server", "schemars"] }

[dev-dependencies]
pretty_assertions.workspace = true
