[package]
name = "forge_web"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
forge_api.workspace = true
forge_domain.workspace = true
forge_workspace.workspace = true
anyhow.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
async-stream.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yml.workspace = true
chrono.workspace = true
cron = "0.12"
tracing.workspace = true
open.workspace = true
base64.workspace = true
reqwest.workspace = true
axum = "0.8"
imap = "2.4"
native-tls = "0.2"

[dev-dependencies]
pretty_assertions.workspace = true
