[package]
name = "forge_workspace"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

# Multi-agent orchestration spine: request documents (the shared "blackboard")
# and the status state machine that hands work off between agent roles.
# Pure file+YAML I/O — no agent/LLM dependency, so it can be built and tested
# on its own before any orchestration is wired up.

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_yml.workspace = true
serde_json.workspace = true
anyhow.workspace = true
chrono.workspace = true
forge_domain.workspace = true

[dev-dependencies]
tempfile = "3.27.0"
pretty_assertions = "1.4.0"
